--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         Let me tell you a few things about myself...
       </h2>
       <div class="about-info">
-        <img src="../dist/img/portrait.jpg" alt="Ant Jones" class="bio-image">
+        <img src="../img/portrait.jpg" alt="Ant Jones" class="bio-image">
 
 
         <div class="bio">
