--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         Let me tell you a few things about myself...
       </h2>
       <div class="about-info">
-        <img src="../img/portrait.jpg" alt="Ant Jones" class="bio-image">
+        <img src="/img/portrait.jpg" alt="Ant Jones" class="bio-image">
 
 
         <div class="bio">
@@ -101,40 +101,6 @@
 
     <footer id="main-footer"> 
       Copyright &copy; 2019
-      <!-- Include the Google Maps API library - required for embedding maps -->
-<script src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-
-<script type="text/javascript">
-
-// The latitude and longitude of your business / place
-var position = [38.8338816, -104.82136];
-
-function showGoogleMaps() {
-
-    var latLng = new google.maps.LatLng(position[0], position[1]);
-
-    var mapOptions = {
-        zoom: 16, // initialize zoom level - the max value is 21
-        streetViewControl: false, // hide the yellow Street View pegman
-        scaleControl: true, // allow users to zoom the Google Map
-        mapTypeId: google.maps.MapTypeId.ROADMAP,
-        center: latLng
-    };
-
-    map = new google.maps.Map(document.getElementById('googlemaps'),
-        mapOptions);
-
-    // Show the default red marker at the location
-    marker = new google.maps.Marker({
-        position: latLng,
-        map: map,
-        draggable: false,
-        animation: google.maps.Animation.DROP
-    });
-}
-
-google.maps.event.addDomListener(window, 'load', showGoogleMaps);
-</script>
     </footer>
     <script src="js/main.js"></script>
   </body>
