--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
         </div> 
         <div class="map">
             <div class="wrapper">
-          <img src="../dist/img/map.jpg" alt="CO Map" class="map-image">
+          <img src="img/map.jpg" alt="CO Map" class="map-image">
         </div>  
         </div>
   </div>
